kubernetes/apps/talos1018/adsb/flightradar24/app/deployment.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flightradar24
  labels:
    app.kubernetes.io/name: flightradar24
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: flightradar24
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flightradar24
    spec:
      containers:
        - name: flightradar24
          image: ghcr.io/sdr-enthusiasts/docker-flightradar24:1.0.48-0
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop: [ALL]
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 8754
          resources:
            limits:
              cpu: "0.02"
              memory: "100Mi"
            requests:
              cpu: "0.004"
              memory: "20Mi"
