kubernetes/apps/talos1018/adsb/flightradar24/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flightradar24
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: ADSB
    gethomepage.dev/icon: sh-flightradar24
    gethomepage.dev/name: Flightradar24
    gethomepage.dev/app: flightradar24
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
      sectionName: https-internal
  hostnames:
    - "fr24.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=31536000
      backendRefs:
        - name: flightradar24
          port: 8754
